--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <div class="nav-items"><a href="mens.html">Men</a></div>
             <div class="nav-items"><a href="women.html">Women</a></div>
-            <div class="nav-items"><a href="kids.html">Kidss</a></div>
+            <div class="nav-items"><a href="kids.html">Kids</a></div>
             <div class="nav-items"><a href="home&living.html">Home & Living</a></div>
             <div class="nav-items"><a href="beauty.html">Beauty</a></div>
             <div class="nav-items"><a href="">Studio</a>
